feat: delete Dutch page and extra folder

--- a/login.html
+++ b/login.html
@@ -9,10 +9,24 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="login.js"></script>
+    <script src="app.js"></script>
+	
 </head>
 <body>
+	<header class="header">
 
+		<div class="navigation-menu">
+		 <nav class="nav-bar">
+			 <ul class="main-nav">
+				 <li><a href="./index.html">Home</a></li>
+				 <li><a href="#">About</a></li>
+				 <li><a href="#">Videos and Content</a></li>
+				 <li><a href="https://mailchi.mp/85f8245e2cd1/ensino-de-idiomas-lyceum">Subscribe</a></li>
+				 <li><a href="./login.html">Login</a></li>
+			 </ul>        
+		 </nav>
+	 </div>
+	 </header>
 
 <link rel="stylesheet" href="login.css">
 <div class="login-reg-panel">
