--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Lyceum Ensino de Idiomas</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/Imagens/Icons/round_icon.ico" type="image/icon type">
     
@@ -20,9 +20,9 @@
         <ul class="main-nav">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Learning Tips</a></li>
+            <li><a href="#">Videos and Content</a></li>
             <li><a href="https://mailchi.mp/85f8245e2cd1/ensino-de-idiomas-lyceum">Subscribe</a></li>
-            <li><a href="../Main Page/login.html">Login</a></li>
+            <li><a href="./login.html">Login</a></li>
         </ul>        
     </nav>
 </div>
