style: change login page

--- a/login.html
+++ b/login.html
@@ -1,65 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
-    <link rel="icon" href="/Imagens/Icons/round_icon.ico" type="image/icon type">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="app.js"></script>
-	
-</head>
-<body>
-	<header class="header">
 
-		<div class="navigation-menu">
-		 <nav class="nav-bar">
-			 <ul class="main-nav">
-				 <li><a href="./index.html">Home</a></li>
-				 <li><a href="#">About</a></li>
-				 <li><a href="#">Videos and Content</a></li>
-				 <li><a href="https://mailchi.mp/85f8245e2cd1/ensino-de-idiomas-lyceum">Subscribe</a></li>
-				 <li><a href="./login.html">Login</a></li>
-			 </ul>        
-		 </nav>
-	 </div>
-	 </header>
+    <link rel="stylesheet" href="login.css" />
 
-<link rel="stylesheet" href="login.css">
-<div class="login-reg-panel">
-		<div class="login-info-box">
-			<h2>Have an account?</h2>
-			<p>Lorem ipsum dolor sit amet</p>
-			<label id="label-register" for="log-reg-show">Login</label>
-			<input type="radio" name="active-log-panel" id="log-reg-show"  checked="checked">
-		</div>
-							
-		<div class="register-info-box">
-			<h2>Don't have an account?</h2>
-			<p>Lorem ipsum dolor sit amet</p>
-			<label id="label-login" for="log-login-show">Register</label>
-			<input type="radio" name="active-log-panel" id="log-login-show">
-		</div>
-							
-		<div class="white-panel">
-			<div class="login-show">
-				<h2>LOGIN</h2>
-				<input type="text" placeholder="Email">
-				<input type="password" placeholder="Password">
-				<input type="button" value="Login">
-				<a href="">Forgot password?</a>
-			</div>
-			<div class="register-show">
-				<h2>REGISTER</h2>
-				<input type="text" placeholder="Email">
-				<input type="password" placeholder="Password">
-				<input type="password" placeholder="Confirm Password">
-				<input type="button" value="Register">
-			</div>
-		</div>
-	</div>
-</body>
+    <link rel="stylesheet" href="style.css" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200;400&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="icon"
+      href="./Imagens/Icons/round_icon.ico"
+      type="image/icon type"
+    />
+  </head>
+  <body>
+    <header>
+      <div class="navigation-menu">
+        <nav class="nav-bar">
+          <ul class="main-nav">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Videos </a></li>
+            <li>
+              <a href="https://mailchi.mp/85f8245e2cd1/ensino-de-idiomas-lyceum"
+                >Subscribe</a
+              >
+            </li>
+            <li><a href="./login.html">Login</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <div class="login-reg-panel">
+      <div class="login-info-box">
+        <h2>Have an account?</h2>
+        <p>Lorem ipsum dolor sit amet</p>
+        <label id="label-register" for="log-reg-show">Login</label>
+        <input
+          type="radio"
+          name="active-log-panel"
+          id="log-reg-show"
+          checked="checked"
+        />
+      </div>
+
+      <div class="register-info-box">
+        <h2>Don't have an account?</h2>
+        <p>Lorem ipsum dolor sit amet</p>
+        <label id="label-login" for="log-login-show">Register</label>
+        <input type="radio" name="active-log-panel" id="log-login-show" />
+      </div>
+
+      <div class="white-panel">
+        <div class="login-show">
+          <h2>LOGIN</h2>
+          <input type="text" placeholder="Email" />
+          <input type="password" placeholder="Password" />
+          <input type="button" value="Login" />
+          <a href="">Forgot password?</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
