--- a/index.html
+++ b/index.html
@@ -1,53 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lyceum Ensino de Idiomas</title>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/Imagens/Icons/round_icon.ico" type="image/icon type">
-    
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200;400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      href="./Imagens/Icons/round_icon.ico"
+      type="image/icon type"
+    />
+  </head>
+  <body>
     <header class="header">
-
-   <div class="navigation-menu">
-    <nav class="nav-bar">
-        <ul class="main-nav">
+      <div class="navigation-menu">
+        <nav class="nav-bar">
+          <ul class="main-nav">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Videos and Content</a></li>
-            <li><a href="https://mailchi.mp/85f8245e2cd1/ensino-de-idiomas-lyceum">Subscribe</a></li>
+            <li><a href="#">Videos </a></li>
+            <li>
+              <a href="https://mailchi.mp/85f8245e2cd1/ensino-de-idiomas-lyceum"
+                >Subscribe</a
+              >
+            </li>
             <li><a href="./login.html">Login</a></li>
-        </ul>        
-    </nav>
-</div>
-</header>
-<div class="middle-section">
-<span id="space"></span>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="middle-section">
+      <span id="space"></span>
+    </div>
+    <div class="container grid-wrapper">
+      <div class="box"><img src="" alt="" /></div>
+      <div class="box"><img src="" alt="" /></div>
+      <div class="box"><img src="" alt="" /></div>
+    </div>
+  </body>
 
-</div>
-<div class="container grid-wrapper">
-<div class="box"><img src="" alt=""></div>
-<div class="box"><img src="" alt=""></div>
-<div class="box"><img src="" alt=""></div>
-
-</div>
-
-</body>
-
-<footer class="footer-container text-center">
+  <footer class="footer-container text-center">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <p id="print-footer">© PriMa | Website created with <a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+          <p id="print-footer">
+            © PriMa | Website created with
+            <a href="https://www.unsplash.com/" title="Beautiful Free Images"
+              >Unsplash</a
+            >
+          </p>
         </div>
       </div>
     </div>
   </footer>
-
 </html>
